crates/mesh-parser/tests/snapshots/parser_tests__pattern_or_triple.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  1 | 2 | 3 -> true\\n  _ -> false\\nend\")"
---
SOURCE_FILE@0..32
  CASE_EXPR@0..32
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..19
      OR_PAT@8..13
        LITERAL_PAT@8..9
          INT_LITERAL@8..9 "1"
        BAR@9..10 "|"
        LITERAL_PAT@10..11
          INT_LITERAL@10..11 "2"
        BAR@11..12 "|"
        LITERAL_PAT@12..13
          INT_LITERAL@12..13 "3"
      ARROW@13..15 "->"
      LITERAL@15..19
        TRUE_KW@15..19 "true"
    NEWLINE@19..20 "\n"
    MATCH_ARM@20..28
      WILDCARD_PAT@20..21
        IDENT@20..21 "_"
      ARROW@21..23 "->"
      LITERAL@23..28
        FALSE_KW@23..28 "false"
    NEWLINE@28..29 "\n"
    END_KW@29..32 "end"
  EOF@32..32 ""
