crates/mesh-parser/tests/snapshots/parser_tests__pattern_or_with_constructors.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Some(1) | Some(2) -> true\\n  _ -> false\\nend\")"
---
SOURCE_FILE@0..42
  CASE_EXPR@0..42
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..29
      OR_PAT@8..23
        CONSTRUCTOR_PAT@8..15
          IDENT@8..12 "Some"
          L_PAREN@12..13 "("
          LITERAL_PAT@13..14
            INT_LITERAL@13..14 "1"
          R_PAREN@14..15 ")"
        BAR@15..16 "|"
        CONSTRUCTOR_PAT@16..23
          IDENT@16..20 "Some"
          L_PAREN@20..21 "("
          LITERAL_PAT@21..22
            INT_LITERAL@21..22 "2"
          R_PAREN@22..23 ")"
      ARROW@23..25 "->"
      LITERAL@25..29
        TRUE_KW@25..29 "true"
    NEWLINE@29..30 "\n"
    MATCH_ARM@30..38
      WILDCARD_PAT@30..31
        IDENT@30..31 "_"
      ARROW@31..33 "->"
      LITERAL@33..38
        FALSE_KW@33..38 "false"
    NEWLINE@38..39 "\n"
    END_KW@39..42 "end"
  EOF@42..42 ""
