crates/mesh-parser/tests/snapshots/parser_tests__self_expr.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"self()\")"
---
SOURCE_FILE@0..6
  SELF_EXPR@0..6
    SELF_KW@0..4 "self"
    L_PAREN@4..5 "("
    R_PAREN@5..6 ")"
  EOF@6..6 ""
