crates/mesh-parser/tests/snapshots/parser_tests__service_def_full.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..214
  SERVICE_DEF@0..214
    SERVICE_KW@0..7 "service"
    NAME@7..14
      IDENT@7..14 "Counter"
    DO_KW@14..16 "do"
    BLOCK@16..211
      NEWLINE@16..17 "\n"
      FN_DEF@17..60
        FN_KW@17..19 "fn"
        NAME@19..23
          IDENT@19..23 "init"
        PARAM_LIST@23..39
          L_PAREN@23..24 "("
          PARAM@24..38
            IDENT@24..33 "start_val"
            TYPE_ANNOTATION@33..38
              COLON_COLON@33..35 "::"
              IDENT@35..38 "Int"
          R_PAREN@38..39 ")"
        TYPE_ANNOTATION@39..44
          ARROW@39..41 "->"
          IDENT@41..44 "Int"
        DO_KW@44..46 "do"
        BLOCK@46..57
          NEWLINE@46..47 "\n"
          NAME_REF@47..56
            IDENT@47..56 "start_val"
          NEWLINE@56..57 "\n"
        END_KW@57..60 "end"
      NEWLINE@60..61 "\n"
      NEWLINE@61..62 "\n"
      CALL_HANDLER@62..108
        CALL_KW@62..66 "call"
        NAME@66..74
          IDENT@66..74 "GetCount"
        PARAM_LIST@74..76
          L_PAREN@74..75 "("
          R_PAREN@75..76 ")"
        TYPE_ANNOTATION@76..81
          COLON_COLON@76..78 "::"
          IDENT@78..81 "Int"
        DO_KW@81..83 "do"
        BAR@83..84 "|"
        NAME@84..89
          IDENT@84..89 "state"
        BAR@89..90 "|"
        BLOCK@90..105
          NEWLINE@90..91 "\n"
          TUPLE_EXPR@91..104
            L_PAREN@91..92 "("
            NAME_REF@92..97
              IDENT@92..97 "state"
            COMMA@97..98 ","
            NAME_REF@98..103
              IDENT@98..103 "state"
            R_PAREN@103..104 ")"
          NEWLINE@104..105 "\n"
        END_KW@105..108 "end"
      NEWLINE@108..109 "\n"
      NEWLINE@109..110 "\n"
      CALL_HANDLER@110..182
        CALL_KW@110..114 "call"
        NAME@114..123
          IDENT@114..123 "Increment"
        PARAM_LIST@123..136
          L_PAREN@123..124 "("
          PARAM@124..135
            IDENT@124..130 "amount"
            TYPE_ANNOTATION@130..135
              COLON_COLON@130..132 "::"
              IDENT@132..135 "Int"
          R_PAREN@135..136 ")"
        TYPE_ANNOTATION@136..141
          COLON_COLON@136..138 "::"
          IDENT@138..141 "Int"
        DO_KW@141..143 "do"
        BAR@143..144 "|"
        NAME@144..149
          IDENT@144..149 "state"
        BAR@149..150 "|"
        BLOCK@150..179
          NEWLINE@150..151 "\n"
          TUPLE_EXPR@151..178
            L_PAREN@151..152 "("
            BINARY_EXPR@152..164
              NAME_REF@152..157
                IDENT@152..157 "state"
              PLUS@157..158 "+"
              NAME_REF@158..164
                IDENT@158..164 "amount"
            COMMA@164..165 ","
            BINARY_EXPR@165..177
              NAME_REF@165..170
                IDENT@165..170 "state"
              PLUS@170..171 "+"
              NAME_REF@171..177
                IDENT@171..177 "amount"
            R_PAREN@177..178 ")"
          NEWLINE@178..179 "\n"
        END_KW@179..182 "end"
      NEWLINE@182..183 "\n"
      NEWLINE@183..184 "\n"
      CAST_HANDLER@184..210
        CAST_KW@184..188 "cast"
        NAME@188..193
          IDENT@188..193 "Reset"
        PARAM_LIST@193..195
          L_PAREN@193..194 "("
          R_PAREN@194..195 ")"
        DO_KW@195..197 "do"
        BAR@197..198 "|"
        NAME@198..203
          IDENT@198..203 "state"
        BAR@203..204 "|"
        BLOCK@204..207
          NEWLINE@204..205 "\n"
          LITERAL@205..206
            INT_LITERAL@205..206 "0"
          NEWLINE@206..207 "\n"
        END_KW@207..210 "end"
      NEWLINE@210..211 "\n"
    END_KW@211..214 "end"
  EOF@214..214 ""
