crates/mesh-parser/tests/snapshots/parser_tests__struct_deriving_clause_snapshot.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..44
  STRUCT_DEF@0..44
    STRUCT_KW@0..6 "struct"
    NAME@6..11
      IDENT@6..11 "Point"
    DO_KW@11..13 "do"
    NEWLINE@13..14 "\n"
    STRUCT_FIELD@14..20
      NAME@14..15
        IDENT@14..15 "x"
      TYPE_ANNOTATION@15..20
        COLON_COLON@15..17 "::"
        IDENT@17..20 "Int"
    NEWLINE@20..21 "\n"
    END_KW@21..24 "end"
    DERIVING_CLAUSE@24..44
      IDENT@24..32 "deriving"
      L_PAREN@32..33 "("
      IDENT@33..35 "Eq"
      COMMA@35..36 ","
      IDENT@36..43 "Display"
      R_PAREN@43..44 ")"
  EOF@44..44 ""
