crates/mesh-parser/tests/snapshots/parser_tests__struct_simple.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"struct Point do\\n  x :: Float\\n  y :: Float\\nend\")"
---
SOURCE_FILE@0..35
  STRUCT_DEF@0..35
    STRUCT_KW@0..6 "struct"
    NAME@6..11
      IDENT@6..11 "Point"
    DO_KW@11..13 "do"
    NEWLINE@13..14 "\n"
    STRUCT_FIELD@14..22
      NAME@14..15
        IDENT@14..15 "x"
      TYPE_ANNOTATION@15..22
        COLON_COLON@15..17 "::"
        IDENT@17..22 "Float"
    NEWLINE@22..23 "\n"
    STRUCT_FIELD@23..31
      NAME@23..24
        IDENT@23..24 "y"
      TYPE_ANNOTATION@24..31
        COLON_COLON@24..26 "::"
        IDENT@26..31 "Float"
    NEWLINE@31..32 "\n"
    END_KW@32..35 "end"
  EOF@35..35 ""
